[package]
name = "rclone-triage"
version = "0.1.0"
edition = "2021"
description = "Forensic cloud triage tool with embedded rclone"
authors = ["Forensic Team"]
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Embedded binary
rust-embed = "8.5"

# OAuth / HTTP server
tiny_http = "0.12"
open = "5.3"

# Serialization & Output
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography & Hashing
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
hex = "0.4"
base64 = "0.22"
aes-gcm = "0.10"
pbkdf2 = "0.12"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Regex
regex = "1.10"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Filesystem & Paths
dirs = "5.0"
tempfile = "3.14"

# Async runtime
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "fs",
    "io-util",
    "process",
] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Signal handling
ctrlc = "3.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
